--- a/Survey/Resources/quill-html.html
+++ b/Survey/Resources/quill-html.html
@@ -19,7 +19,7 @@
             }
 
             .ql-snow .ql-editor {
-                padding: 0;
+                padding: 10px;
                 word-break: break-word;
             }
 
